appointment create prevent jumping without valid data

--- a/src/app/components/termin/appointment-create/appointment-create.component.scss
+++ b/src/app/components/termin/appointment-create/appointment-create.component.scss
@@ -5,6 +5,10 @@
   line-height: $size;
 }
 
+::ng-deep .mat-vertical-stepper-header {
+  pointer-events: none !important;
+}
+
 .mat-card {
   margin: 25px auto;
 
